ТЗ-8. Добавлены поля продолжительности задач, даты и времени начала и завершения выполнения задач. Выполнена сортировка задач по приоритету (времени начала выполнения). Код покрыт тестами.